@@ -1,3 +1,9 @@
+2019-05-22  Martin Liska  <mliska@suse.cz>
+
+	PR lto/90500
+	* gcc.target/i386/pr90500-1.c: Make the test-case valid
+	now.
+
 2019-05-22  Richard Biener  <rguenther@suse.de>
 
 	* gcc.dg/tree-ssa/ssa-lim-13.c: New testcase.
